--- a/photo-fetcher.html
+++ b/photo-fetcher.html
@@ -23,8 +23,8 @@
    </div>
     
         <div class="image-container">
-          <div class="image-row" id="topImages"></div>
-          <div class="image-row" id="bottomImages"></div>
+          <div class="image-row" id="top"></div>
+          <div class="image-row" id="bottom"></div>
       </div>
       
       <button id="fetch-more-button">More Photos</button>
